# otterlang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  plan.md  roadmap.md
.github/workflows/: ci.yml
crates/ast/src/: lib.rs  nodes.rs
crates/cache/src/: manager.rs  metadata.rs  path.rs
crates/common/src/: span.rs
crates/fmt/src/: formatter.rs
crates/lexer/src/: token.rs  tokenizer.rs
crates/module/: Cargo.toml
crates/module/src/: lib.rs  loader.rs  processor.rs  resolver.rs
crates/otterc_ast/: Cargo.toml
crates/otterc_ast/src/: nodes.rs
crates/otterc_cache/: Cargo.toml
crates/otterc_codegen/: Cargo.toml
crates/otterc_codegen/src/: lib.rs
crates/otterc_codegen/src/llvm/: bridges.rs  build.rs  config.rs  mod.rs
crates/otterc_codegen/src/llvm/compiler/: expr.rs  mod.rs  stmt.rs
crates/otterc_config/: Cargo.toml
crates/otterc_config/src/: lib.rs  target.rs
crates/otterc_ffi/: Cargo.toml
crates/otterc_ffi/examples/: coverage_analysis.rs  debug_rustdoc.rs
crates/otterc_ffi/src/: api.rs  dynamic.rs  exports.rs  lib.rs  providers.rs  rust_stubgen.rs  rustdoc_extractor.rs  types.rs
crates/otterc_ffi/tests/: deep_extraction_tests.rs  extraction_tests.rs
crates/otterc_fmt/: Cargo.toml
crates/otterc_fmt/src/: formatter.rs
crates/otterc_jit/src/optimization/: inliner.rs  reoptimizer.rs
crates/otterc_language/: Cargo.toml
crates/otterc_lexer/: Cargo.toml
crates/otterc_lexer/src/: token.rs  tokenizer.rs
crates/otterc_module/: Cargo.toml
crates/otterc_module/src/: loader.rs
crates/otterc_parser/: Cargo.toml
crates/otterc_parser/src/: grammar.rs
crates/otterc_runtime/: Cargo.toml
crates/otterc_runtime/src/: benchmark.rs  config.rs  error.rs  introspection.rs  lib.rs  strings.rs
crates/otterc_runtime/src/jit/: engine.rs  executor.rs  mod.rs  tiered_compiler.rs
crates/otterc_runtime/src/jit/adaptive/: concurrency.rs  memory.rs  mod.rs
crates/otterc_runtime/src/jit/cache/: eviction.rs  function_cache.rs  metadata.rs  mod.rs
crates/otterc_runtime/src/jit/concurrency/: extensions.rs  mod.rs  monitoring.rs  rebalancer.rs  scheduler.rs  task.rs  thread_pool.rs  workload_analyzer.rs
crates/otterc_runtime/src/jit/layout/: analyzer.rs  mod.rs  optimizer.rs  simd.rs  transformer.rs  validator.rs
crates/otterc_runtime/src/jit/optimization/: call_graph.rs  inliner.rs  mod.rs  reoptimizer.rs
crates/otterc_runtime/src/jit/profiler/: call_profiler.rs  compilation_profiler.rs  hot_detector.rs  memory_profiler.rs  mod.rs  sampler.rs
crates/otterc_runtime/src/jit/specialization/: constant_prop.rs  key.rs  mod.rs  type_tracker.rs
crates/otterc_runtime/src/memory/: allocator.rs  arena.rs  config.rs  gc.rs  mod.rs  profiler.rs  rc.rs
crates/otterc_runtime/src/stdlib/: builtins.rs  enums.rs  exceptions.rs  fmt.rs  gc.rs  http.rs  io.rs  json.rs  math.rs  mod.rs  net.rs  rand.rs  runtime.rs  sync.rs  sys.rs  task.rs  test.rs  time.rs  yaml.rs
crates/otterc_runtime/src/task/: channel.rs  metrics.rs  mod.rs  scheduler.rs  task_impl.rs  timer.rs
crates/otterc_span/: Cargo.toml
crates/otterc_symbol/: Cargo.toml
crates/otterc_symbol/src/: registry.rs
crates/otterc_typecheck/: Cargo.toml
crates/otterc_typecheck/src/: checker.rs  diagnostics.rs  lib.rs  types.rs
crates/otterc_utils/: Cargo.toml
crates/parser/src/: grammar.rs
docs/: DATABASE.md  EXAMPLES.md  GC_GUIDE.md  GETTING_STARTED.md  LANGUAGE_SPEC.md  ROADMAP.md
examples/: advanced_syntax_test.ot  benchmark.sh  pi_leibniz.otter
examples/basic/: advanced_pipeline.ot  advanced_pipeline.otter  arithmetic.otter  enum_demo.ot  exception_advanced.ot  exception_advanced.otter  exception_basics.ot  exception_basics.otter  exception_resource.ot  exception_resource.otter  exception_validation.ot  exception_validation.otter  fibonacci.otter  generic_struct_test.ot  hello.ot  hello.otter  multiline_test.ot  pythonic_demo.otter  struct_demo.otter  struct_methods_demo.otter  task_benchmark.ot  task_benchmark.otter
examples/benchmarks/: benchmark.sh  pi_leibniz.c  pi_leibniz.otter  pi_leibniz.rs
examples/ffi/: ffi_rand_advanced.otter  ffi_rand_demo.otter  test_ffi_struct.ot
package/: changelog  control  rules
package/src/: build.py
src/: cli.rs  lib.rs  main.rs
src/ast/: nodes.rs
src/codegen/: llvm.rs  target.rs
src/codegen/cranelift/: backend.rs  build.rs  lowering.rs  mod.rs  types.rs
src/codegen/llvm/: bridges.rs  build.rs  compiler.rs  config.rs  mod.rs
src/codegen/llvm/compiler/: expr.rs  mod.rs  stmt.rs  types.rs
src/ffi/: cargo_bridge.rs  metadata.rs  mod.rs  rust_stubgen.rs  rustdoc_extractor.rs
src/fmt/: formatter.rs
src/lexer/: token.rs  tokenizer.rs
src/lsp/: mod.rs
src/module/: loader.rs  mod.rs  processor.rs  resolver.rs
src/parser/: grammar.rs
src/repl/: engine.rs  events.rs  mod.rs  state.rs  tui.rs  ui.rs
src/runtime/: benchmark.rs  error.rs  ffi.rs  ffi_api.rs  introspection.rs  mod.rs  strings.rs  symbol_registry.rs
src/runtime/jit/: engine.rs  executor.rs
src/runtime/jit/concurrency/: extensions.rs  mod.rs  scheduler.rs  thread_pool.rs
src/runtime/jit/layout/: analyzer.rs  profiler.rs  simd.rs  validator.rs
src/runtime/memory/: allocator.rs  config.rs  gc.rs  mod.rs  object.rs  profiler.rs  rc.rs
src/runtime/stdlib/: builtins.rs  exceptions.rs  fmt.rs  http.rs  io.rs  mod.rs  net.rs  rand.rs  runtime.rs  sys.rs  task.rs  test.rs  time.rs
src/runtime/task/: channel.rs  metrics.rs  mod.rs  scheduler.rs  task.rs  timer.rs  tls.rs
src/test/: discovery.rs  reporter.rs  runner.rs
src/tools/: mod.rs  profiler.rs
src/typecheck/: checker.rs  diagnostics.rs  mod.rs  types.rs  workspace.rs
src/utils/: errors.rs
stdlib/otter/: builtins.ot  builtins.otter
tests/: codegen_tests.ot  ffi_transparent.rs  for_loop_test.ot
vscode-extension/: .vscodeignore  CONTRIBUTING.md  LICENSE  README.md  language-configuration.json  package.json
vscode-extension/icons/: otterlang-icon-theme.json
vscode-extension/snippets/: otterlang.json
vscode-extension/src/: extension.ts
(+7 files in other folders)
