cargo-features = ["codegen-backend"]

[package]
name = "otterlang"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonathanmagambo/otterlang"
readme = "README.md"
description = "An experimental indentation-sensitive programming language with LLVM backend"
keywords = ["language", "compiler", "programming-language", "llvm", "jit"]
categories = ["development-tools", "programming"]
authors = ["OtterLang Contributors"]

[[bin]]
name = "otterlang"
path = "src/main.rs"

[[bin]]
name = "otter"
path = "src/bin/otter.rs"

[[bin]]
name = "otterlang-lsp"
path = "src/bin/lsp.rs"

[features]
default = []
task-runtime = []
toml-config = ["dep:toml"]
ffi-main = []

[dependencies]
otterc_ast.path = "crates/otterc_ast"
otterc_cache.path = "crates/otterc_cache"
otterc_codegen.path = "crates/otterc_codegen"
otterc_config.path = "crates/otterc_config"
otterc_ffi.path = "crates/otterc_ffi"
otterc_fmt.path = "crates/otterc_fmt"
otterc_lexer.path = "crates/otterc_lexer"
otterc_module.path = "crates/otterc_module"
otterc_parser.path = "crates/otterc_parser"
otterc_runtime.path = "crates/otterc_runtime"
otterc_span.path = "crates/otterc_span"
otterc_symbol.path = "crates/otterc_symbol"
otterc_typecheck.path = "crates/otterc_typecheck"
otterc_utils.path = "crates/otterc_utils"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
crossterm = "0.29.0"
directories = "5.0"
glob = "0.3"
libc = "0.2"
ratatui = "0.29.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "time",
] }
toml = { version = "0.8", optional = true }
tower-lsp = "0.20"
tracing = "0.1"
ureq = { version = "2", default-features = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[patch.crates-io]
llvm-sys = { path = "vendor/llvm-sys" }

# enable everything lint-wise, set priority to -1 for easy override
[workspace.lints.clippy.pedantic]
level = "warn"
priority = -1

[workspace.lints.clippy.nursery]
level = "warn"
priority = -1

[workspace.lints.clippy.suspicious]
level = "warn"
priority = -1

[workspace.lints.clippy.complexity]
level = "warn"
priority = -1

[workspace.lints.clippy.perf]
level = "warn"
priority = -1

[workspace.lints.clippy.restriction]
level = "warn"
priority = -1

# allowlist
[workspace.lints.clippy]

# implicit_return is allowable because it is idiomatic
implicit_return.level = "allow"

# missing_trait_methods is allowable because otherwise it forces the
# programmer to rewrite already written trait methods, which is
# unnecessary and time-consuming
missing_trait_methods.level = "allow"

# float_arithmetic is allowable because we are not developing on platforms
# that cannot support it
float_arithmetic.level = "allow"

# as_conversions is allowable because we already check all other as-
# conversions, this lint activates regardless of if the proper checks
# are in place
as_conversions.level = "allow"

# blanket_clippy_restriction_lints is allowable because we are actively
# disabling restriction lints that are unnecessary
blanket_clippy_restriction_lints.level = "allow"

# separated_literal_suffix is allowable because it is purely stylistic
separated_literal_suffix.level = "allow"

# mod_module_files is allowable because it is stylistic
mod_module_files.level = "allow"

# wildcard_enum_match_arm is allowable because it disables the use of a
# wildcard pattern, making code less concise and more unreadable
wildcard_enum_match_arm.level = "allow"

# pub_with_shorthand is allowable because rustfmt auto-formats certain
# uses of pub without the shorthand to be shorthand.
pub_with_shorthand.level = "allow"

# pub_use is allowable because oftentimes you may re-export one, or multiple,
# things, only restriction for this project is pub use with glob
pub_use.level = "allow"

# multiple_inherent_impl is allowable because we enforce that items - unless
# explicitly said otherwise - must be sorted alphabetically; in our case, it
# also makes sense that constructors are at the top of the impl-s for a type,
# so it makes sense to separate - at least - constructors from the rest of the
# impl-s.
multiple_inherent_impl.level = "allow"
