cargo-features = ["codegen-backend"]

[package]
name = "otterlang"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jonathanmagambo/otterlang"
readme = "README.md"
description = "An experimental indentation-sensitive programming language with LLVM backend"
keywords = ["language", "compiler", "programming-language", "llvm", "jit"]
categories = ["development-tools", "programming"]
authors = ["OtterLang Contributors"]

[[bin]]
name = "otterlang"
path = "src/main.rs"

[[bin]]
name = "otter"
path = "src/bin/otter.rs"

[[bin]]
name = "otterlang-lsp"
path = "src/bin/lsp.rs"

[features]
default = []
task-runtime = []
toml-config = ["dep:toml"]
ffi-main = []

[dependencies]
otterc_ast.path = "crates/otterc_ast"
otterc_span.path = "crates/otterc_span"
otterc_utils.path = "crates/otterc_utils"
otterc_lexer.path = "crates/otterc_lexer"
otterc_cache.path = "crates/otterc_cache"
otterc_ffi.path = "crates/otterc_ffi"
otterc_fmt.path = "crates/otterc_fmt"
otterc_parser.path = "crates/otterc_parser"
otterc_language.path = "crates/otterc_language"
otterc_module.path = "crates/otterc_module"

anyhow = "1.0"
tempfile = "3.10"
ariadne = "0.3"
abi_stable = "0.11"
ahash = "0.8"
cargo_metadata = "0.18"
chrono = { version = "0.4", features = ["serde"] }
chumsky = "0.9"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
directories = "5.0"
duct = "0.13"
glob = "0.3"
once_cell = "1.19"
inventory = "0.3"
indicatif = "0.17"
inkwell = { version = "0.x", features = ["llvm18-1"] }
libloading = "0.8"
libm = "0.2"
libc = "0.2"
memmap2 = "0.9"
parking_lot = "0.12"
rayon = "1.8"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sysinfo = "0.30"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-lsp = "0.20"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "time",
] }
ratatui = "0.29.0"
crossterm = "0.29.0"
ureq = { version = "2", default-features = true }
toml = { version = "0.8", optional = true }

[workspace]
resolver = "3"
members = ["crates/*"]

[patch.crates-io]
llvm-sys = { path = "vendor/llvm-sys" }

[lints]
workspace = true

[workspace.lints.clippy.suspicious]
level = "warn"
priority = -1

[workspace.lints.clippy.complexity]
level = "warn"
priority = -1

[workspace.lints.clippy.perf]
level = "warn"
priority = -1

[workspace.lints.clippy]
allow_attributes.level = "warn"
allow_attributes_without_reason.level = "warn"
dbg_macro.level = "warn"
enum_glob_use.level = "warn"
exit.level = "warn"
macro_use_imports.level = "warn"
manual_let_else.level = "warn"
manual_string_new.level = "warn"
map_err_ignore.level = "warn"
match_same_arms.level = "warn"
option_as_ref_cloned.level = "warn"
option_option.level = "warn"
panic.level = "deny"
print_stderr.level = "warn"
print_stdout.level = "warn"
ref_options.level = "warn"
self_named_module_files.level = "warn"
semicolon_if_nothing_returned.level = "warn"
semicolon_inside_block.level = "warn"
try_err.level = "warn"
unused_result_ok.level = "warn"

# These are useful lints that we want, however at the moment they introduce *many* warnings
# that will take time to fix. We will come back later to enable these one by one and resolve
# their warnings.
# exhaustive_enums.level = "warn"
# exhaustive_structs.level = "warn"
# module_name_repetitions.level = "warn"
# needless_pass_by_value.level = "warn"
# non_std_lazy_statics.level = "warn"
# same_name_method.level = "warn"
# similar_names.level = "warn"
# todo.level = "deny"
# unimplemented.level = "deny"
# unreachable.level = "deny"
# unused_async.level = "warn"
# unused_self.level = "warn"
# unused_trait_names.level = "warn"
# unwrap_used.level = "warn"
