[package]
name = "otterc_ffi"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_cache.path = "../otterc_cache"
otterc_symbol.path = "../otterc_symbol"

abi_stable = "0.11"
anyhow = "1.0"
cargo_metadata = "0.18"
duct = "0.13"
inventory = "0.3"
once_cell = "1.19"
libloading = "0.8"
parking_lot = "0.12"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
serde_yaml = "0.9"
serde_json = "1.0"
