[package]
name = "otterc_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_ast.path = "../otterc_ast"
otterc_codegen.path = "../otterc_codegen"
otterc_config.path = "../otterc_config"
otterc_ffi.path = "../otterc_ffi"
otterc_symbol.path = "../otterc_symbol"
otterc_typecheck.path = "../otterc_typecheck"

abi_stable = "0.11"
ahash = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
inkwell = { version = "0.x", features = ["llvm18-1"] }
inventory = "0.3"
libc = "0.2"
libloading = "0.8"
libm = "0.2"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"
tempfile = "3.10"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "time",
] }
ureq = { version = "2", default-features = true }

[lints]
workspace = true
