[package]
name = "otterc_typecheck"
version = "0.1.0"
edition = "2024"

[dependencies]
otterc_ast.path = "../otterc_ast"
otterc_config.path = "../otterc_config"
otterc_span.path = "../otterc_span"
otterc_symbol.path = "../otterc_symbol"
otterc_utils.path = "../otterc_utils"

anyhow = "1.0"

[lints]
workspace = true
